# Tondo

./: .gitignore
docker/: Dockerfile.base  Dockerfile.joystick  Dockerfile.odrive  Dockerfile.ros2_diff_drive  Dockerfile.rplidar  Dockerfile.talker  Dockerfile.tondo_description  docker-compose.yml  entrypoint.sh
old_files/: my_ros_commands.txt  odrive_overboard_calibration.txt  tondo_installation_guide.odt
old_files/3d_models/: FSR_3d_spring_omnwheel_mount_tondo_v3.gcode  FSR_coperchio_casse_tondo_risonante.gcode  FSR_endstop_magnetico_tondo.gcode  FSR_ferma_caricabatteie.gcode  FSR_mozzo_omniwheel_tondo_v1.gcode  FSR_porta_barretia_tondo_pb_version.gcode  FSR_porta_caricatore.gcode  FSR_porta_volume_tondo.gcode  assieme_round_robot.SLDASM  atacco_telaio_casse_tondo.stl  base_braccio_tondo.SLDPRT  base_braccio_tondo.STL  cabide_create_round_robot_bottom.c2d  carena_centrale_tondo_portacaricatore.SLDPRT  carena_centrale_tondo_portacaricatore.STL  carena_centrale_tondo_portacaricatore_stampabile2.SLDPRT  carena_centrale_tondo_portacaricatore_stampabile2.STL  caster_wheel.SLDPRT  coperchio_casse_tondo.stl  coperchio_casse_tondo_risonante.stl  cut_base1.nc  cut_top.nc  disegno_base_braccio_tondo.SLDDRW  endstop_magnetico_tondo.SLDPRT  endstop_magnetico_tondo.STL  endstop_mount.SLDPRT  endstop_mount.STL  ferma_caricabatteie.SLDPRT  ferma_caricabatteie.STL  mozzo_omniwheel_tondo_v1.stl  porta_caricatore.SLDPRT  (+20 more)
old_files/src/intel_imu_correction/: CMakeLists.txt  package.xml
old_files/src/intel_imu_correction/src/: imu_correction_node.cpp  imu_correction_node.cpp.save
(+111 files in other folders)
